# SimpleMapView

./: .gitignore  CMakeLists.txt  LICENSE  MapEllipse.cpp  MapEllipse.h  MapImage.cpp  MapImage.h  MapItem.cpp  MapItem.h  MapMarker.cpp  MapMarker.h  MapRect.cpp  MapText.h  README.md  Resources.qrc  SimpleMapView.cpp  SimpleMapView.h  SimpleMapView.pro  pyproject.toml
.github/: FUNDING.yml
.github/actions/setup-python-env/: action.yaml
.github/actions/setup-qt-env/: action.yaml
.github/workflows/: tests.yaml
include/: SimpleMapView.h
include/SimpleMapView/: MapEllipse.h  MapImage.h  MapItem.h  MapLines.h  MapPolygon.h  MapRect.h  MapText.h  utils.h
python_bindings/: CMakeLists.txt  bindings.h  simple-map-view.typesystem
python_bindings/PySimpleMapView/: __init__.py  __init__.pyi
src/: MapEllipse.cpp  MapEllipse.h  MapImage.cpp  MapItem.cpp  MapItem.h  MapLines.cpp  MapLines.h  MapPolygon.cpp  MapPolygon.h  MapRect.cpp  MapRect.h  MapText.cpp  SimpleMapView.cpp  SimpleMapView.h
src/SimpleMapView/: MapEllipse.cpp  MapEllipse.h  MapImage.cpp  MapImage.h  MapItem.cpp  MapItem.h  MapLines.cpp  MapLines.h  MapPolygon.cpp  MapPolygon.h  MapRect.cpp  MapRect.h  MapText.cpp  MapText.h  utils.cpp
tests/: CMakeLists.txt  SimpleMapViewTest.cpp
tests/python/: test_SimpleMapView.py
tests/qml/: SimpleMapViewTest.cpp  tst_SimpleMapView.qml
tests/widgets/: SimpleMapViewTest.cpp
