[build-system]
requires = [
    "scikit-build-core",
    "cmake>=3.20",
    "PySide6==6.10.1", 
    "shiboken6==6.10.1", 
    "shiboken6_generator==6.10.1"
]
build-backend = "scikit_build_core.build"

[project]
name = "PySimpleMapView"
version = "1.2.0"
description = "Python bindings for the SimpleMapView C++ Qt Widget"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-DSIMPLE_MAP_VIEW_BUILD_PYTHON_BINDINGS=ON"]
wheel.packages = ["python_bindings/PySimpleMapView"]
